--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
@@ -21,8 +21,11 @@ If you're finding this template and its guides useful, consider giving us [a sta
 
 ### Sandbox and Production Mode
 
-Polar features two separate environemnts: [sandbox](https://sandbox.polar.sh/dashboard) and [production](https://polar.sh/dashboard).
-They are fully isolated from each other, which means that you need to create seperate organizations for each of them. They also feature indepdendant products, sales, access tokens, etc.
+Polar features two separate environments: 
+- [Sandbox](https://sandbox.polar.sh/dashboard).
+- [Production](https://polar.sh/dashboard).
+
+They are fully isolated from each other, which means that you need to create seperate organizations for each of them. They also feature independent products, sales, access tokens, etc.
 
 For local development and testing, you'll want to use Polar's sandbox mode. 
 To enable sandbox mode, make sure that `POLAR_SANDBOX_MODE` is set to `true` in your `.env.server` file:
