--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
@@ -37,9 +37,9 @@ To get your store ID, go to the [Lemon Squeezy Dashboard](https://app.lemonsquee
 
 Copy and paste this number in your `.env.server` file under `LEMONSQUEEZY_STORE_ID`.
 
-### Create Test Products
+### Creating Products
 
-To create a test product, go to the test products url [https://app.lemonsqueezy.com/products](https://app.lemonsqueezy.com/products):
+To create a product, go to the test products url [https://app.lemonsqueezy.com/products](https://app.lemonsqueezy.com/products):
 
 1. Click on the `+ New Product` button and fill in the relevant information for your product. 
 2. Fill in the general information.
@@ -60,26 +60,28 @@ To create a test product, go to the test products url [https://app.lemonsqueezy.
 Note that if you change names of your products, you'll need to update your app code to match these names as well.
 :::
 
-### Create and Use the Lemon Squeezy Webhook in Local Development
+###  Using Lemon Squeezy Webhook in Local Development
 
-Lemon Squeezy notifies your Wasp app about events through a webhook (for example, when a payment succeeds). During development, you need to expose your locally running Wasp server (started with `wasp start`) to the internet. Wasp server runs on port 3001 by default, so you can, for example, run `ngrok` on port 3001 to expose your server to the internet. `ngrok` will generate a public URL that you can give to Lemon Squeezy.
+#### Exposing your Webhook Endpoint to the Internet 
 
-First make sure you have installed [ngrok](https://ngrok.com/docs/getting-started/).
+Lemon Squeezy notifies your Wasp app about customer and payment events through a webhook. However, to make it available to Lemon Squeezy during development, you need to expose your locally running Wasp server (started with `wasp start`) to the internet. 
 
-Once installed, and with your wasp app running, run:
-```sh
-ngrok http 3001
-```
+You can do that by running `ngrok` on port 3001 (Wasp server runs on port 3001 by default). `ngrok` will then generate a public URL that we can provide to Lemon Squeezy:
 
-<Image src={ngrok} alt="ngrok" loading="lazy" />
+1. First make sure you have installed [`ngrok`](https://ngrok.com/docs/getting-started/).
+2. Once `ngrok` is installed and your Wasp app is running, run:
+   ```sh
+   ngrok http 3001
+   ```
+   <Image src={ngrok} alt="ngrok" loading="lazy" />
+3. `ngrok` will display a forwarding address. Copy this address and append `/payments-webhook` to it. It should look something like this: 
+   ```sh title="Callback URL"
+   https://89e5-2003-c7-153c-72a5-f837.ngrok-free.app/payments-webhook
+   ```
 
-Ngrok will output a forwarding address for you. Copy and paste this address and add `/payments-webhook` to the end (this URL path has been configured for you already in `main.wasp` under the `api paymentsWebhook` definition). It should look something like this: 
+#### Creating your Lemon Squeezy Webhook
 
-```sh title="Callback URL"
-https://89e5-2003-c7-153c-72a5-f837.ngrok-free.app/payments-webhook
-```
-
-Now go to your [Lemon Squeezy Webhooks Dashboard](https://app.lemonsqueezy.com/settings/webhooks):
+Next, go to your [Lemon Squeezy Webhooks Dashboard](https://app.lemonsqueezy.com/settings/webhooks):
 1. Click the `+` button.
 2. Add the newly created webhook forwarding url to the `Callback URL` section.
 3. Give your webhook a signing secret (a long, random string).
