--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/polar.mdx
@@ -74,7 +74,7 @@ To create Polar products, in your Polar dashboard:
    ```
 
 :::note[Naming products differently]
-Note that if you change names of your products, you'll need to update your app code to match these names as well.
+Note that if you change names of your products, you'll need to update your app code in `src/payment/plants.ts` to match these names as well.
 :::
 
 ### Using Polar Webhook in Local Development
