--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
@@ -68,7 +68,7 @@ Lemon Squeezy notifies your Wasp app about customer and payment events through a
 
 You can do that by running `ngrok` on port 3001 (Wasp server runs on port 3001 by default). `ngrok` will then generate a public URL that we can provide to Lemon Squeezy:
 
-1. First make sure you have installed [`ngrok`](https://ngrok.com/docs/getting-started/).
+1. First, make sure you have installed [`ngrok`](https://ngrok.com/docs/getting-started/).
 2. Once `ngrok` is installed and your Wasp app is running, run:
    ```sh
    ngrok http 3001
