--- a/opensaas-sh/blog/src/content/docs/guides/vibe-coding.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/vibe-coding.mdx
@@ -15,34 +15,57 @@ If you're looking to use AI to help build (or "vibe code") your SaaS app, this g
 
 ## Coding with AI, Open SaaS, & Wasp
 
-Wasp is particularly well suited to coding with AI due to its central config file which gives LLMs context about the entire full-stack app, and its ability to manage boilerplate code so AI doesn't have to. 
+Wasp is the perfect match for vibe coding due to its central config file which gives LLMs immediate context about the entire full-stack app, as well as its ability to manage boilerplate code so AI doesn't have to. 
 
-Regardless, there are still some shortcomings to using AI to code with Wasp, as well as a learning curve to using it effectively.
+To make it even easier, here are some resources to help you use Wasp & Open SaaS with AI as effectively as possible.
 
-Luckily, we did the work for you and put together a bunch of resources to help you use Wasp & Open SaaS with AI as effectively as possible.
+## Wasp Plugin for Claude Code
 
-### AI Resources in the Template
+If you're using [Claude Code](https://docs.anthropic.com/en/docs/claude-code), you can install the official Wasp plugin to give it curated access to Wasp docs, workflows (such as guided deployments), and best practices.
 
-The template comes with:
-- A full set of rules files, `app/.cursor/rules`, to be used with Cursor or adapted to your coding tool of choice (Windsurf, Claude Code, etc.).
-- A set of example prompts, `app/.cursor/example-prompts.md`, to help you get started.
+Install the plugin by running the following commands in your terminal:
 
-### LLM-Friendly Documentation
+**1. Add the Wasp marketplace**
+```bash
+claude plugin marketplace add wasp-lang/claude-plugins
+```
+
+**2. Install the Wasp plugin**
+```bash
+claude plugin install wasp@wasp-plugins --scope project
+```
+
+For more details on the plugin features and how to use it, see the:
+- [Wasp Claude Code plugin repository](https://github.com/wasp-lang/claude-plugins/tree/main/plugins/wasp).
+
+
+## LLM-Friendly Documentation
 
 We've also created a bunch of LLM-friendly documentation:
 - [Open SaaS Docs - LLMs.txt](https://docs.opensaas.sh/llms.txt) - Links to the raw text docs.
-- **[Open SaaS Docs - LLMs-full.txt](https://docs.opensaas.sh/llms-full.txt) - Complete docs as one text file.** ✅😎
-- [Wasp Docs - LLMs.txt](https://wasp.sh/llms.txt) - Links to the raw text docs.
-- **[Wasp Docs - LLMs-full.txt](https://wasp.sh/llms-full.txt) - Complete docs as one text file.**
+- [Open SaaS Docs - LLMs-full.txt](https://docs.opensaas.sh/llms-full.txt) - Complete docs as one text file.
+- [Wasp Docs - LLMs.txt](https://wasp.sh/llms.txt) - Links to the raw text docs by Wasp version.
+- [Wasp Docs - LLMs-full.txt](https://wasp.sh/llms-full.txt) - Complete docs as one text file.
 
-Add these to your AI-assisted IDE settings so you can easily reference them in your chat sessions with the LLM.
-**In most cases, you'll want to pass the `llms-full.txt` to the LLM and ask it to help you with a specific task.**
+If you're using an AI-assisted IDE like Cursor, you can add these to your settings so you can easily reference them in your chat sessions.
+Or you can just pass the URLs directly into your chat sessions with your AI assistant.
+
+:::note[Our Claude Code Plugin Does this Automatically!]
+If you're using the [Wasp Claude Code plugin](#wasp-plugin-for-claude-code), it will automatically fetch the correct Wasp docs for the version of Wasp you're using to your chat sessions whenever you ask it about Wasp features or documentation.
+:::
 
 <Image src={llmsFullCursor} alt="add llms-full.txt to settings" />
 
 <Image src={llmsTextChat} alt="add llms.txt to settings" />
 
-### More AI-assisted Coding Learning Resources
+## AI Rules & Example Prompts in the Template
+
+The template also comes with:
+- A full set of rules files, `app/.cursor/rules`, to be used with Cursor or adapted to your coding tool of choice (Windsurf, Claude Code, etc.).
+- A set of example prompts, `app/.cursor/example-prompts.md`, to help you get started.
+
+
+## More AI-assisted Coding Learning Resources
 
 Here's a list of articles and tutorials we've made:
 - [3hr YouTube tutorial: Vibe Coding a Personal Finance App w/ Wasp & Cursor](https://www.youtube.com/watch?v=WYzEROo7reY)
