--- a/opensaas-sh/blog/src/content/docs/guides/vibe-coding.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/vibe-coding.mdx
@@ -24,6 +24,7 @@ We've packaged Wasp agent skills and rules into the template to be used by your 
 Skills are found in the `app/.claude` directory of the Open SaaS template, but because [Agent Skills](https://agentskills.io/) are a standard, your AI-assisted coding tool will either load them automatically from the `.claude` directory, or you can add them to manually.
 See your AI-assisted coding tool's documentation for more details on how to add Agent Skills.
 
+Rules, found within the `AGENTS.md` (and `CLAUDE.md`), is another open standard used by AI-assisted coding tools to give instructions to the agents when coding.
 Read more about the [AGENTS.md standard](https://agents.md/) to see if it's compatible with your AI-assisted coding tool of choice..
 
 ## LLM-Friendly Documentation
