update LP and docs

--- a/opensaas-sh/blog/src/content/docs/guides/vibe-coding.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/vibe-coding.mdx
@@ -19,17 +19,17 @@ To make it even easier, here are some resources to help you use Wasp & Open SaaS
 
 ## Agent Skills and Rules
 
-We've packaged Wasp agent skills and rules into the template to be used by your favorite AI-assisted coding tools.
+We've packaged Wasp agent skills and rules into the template to be used by your favorite AI-assisted coding tools (Claude Code, Cursor, VS Code/Copilot, Codex, Gemini CLI, OpenCode, etc.).
 
-Skills are found in the `app/.claude` directory of the Open SaaS template, but because [Agent Skills](https://agentskills.io/) are a standard, your AI-assisted coding tool will either load them automatically from the `.claude` directory, or you can add them to manually.
+Skills are found in the `app/.claude` directory of the Open SaaS template, but because [Agent Skills](https://agentskills.io/) are a recognized standard, your AI-assisted coding tool will either load them automatically from the `.claude` directory, or can be used as-is after they've been properly referenced.
 See your AI-assisted coding tool's documentation for more details on how to add Agent Skills.
 
-Rules, found within the `AGENTS.md` (and `CLAUDE.md`), is another open standard used by AI-assisted coding tools to give instructions to the agents when coding.
-Read more about the [AGENTS.md standard](https://agents.md/) to see if it's compatible with your AI-assisted coding tool of choice..
+Rules, found within the `AGENTS.md` (and `CLAUDE.md`), is another open standard used by many popular AI-assisted coding tools to give instructions to the agents when coding.
+Read more about the [AGENTS.md standard](https://agents.md/) to see if it's compatible with your AI-assisted coding tool of choice.
 
 ## LLM-Friendly Documentation
 
-Note: the `AGENTS.md` has specific instructions on how to use the LLM-friendly documentation but you can also paste the following links in chat sessions if needed.
+Note: the `AGENTS.md` has specific instructions on how to automatically fetch and use the LLM-friendly documentation but you can also paste the following links in chat sessions if needed.
 
 - [Open SaaS Docs - LLMs.txt](https://docs.opensaas.sh/llms.txt) - Links to the raw text docs.
 - [Open SaaS Docs - LLMs-full.txt](https://docs.opensaas.sh/llms-full.txt) - Complete docs as one text file.
