--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/index.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/index.mdx
@@ -38,6 +38,7 @@ Then you should delete:
 - The unused payment processor code within the `/src/payment/<unused-provider>` directories.
 - Any unused environment variables from `.env.server` (they will be prefixed with the name of the provider your are not using):
   - E.g. `STRIPE_API_KEY`, `LEMONSQUEEZY_API_KEY`, `POLAR_ORGANIZATION_ACCESS_TOKEN`.
+- Update `src/env.ts` to uncomment the env schema for your chosen provider and comment out the others.
 - Make sure to also run `npm uninstall` for providers you didn't use:
   - Stripe: `npm uninstall stripe`
   - Polar: `npm uninstall @polar-sh/sdk`
