Fix docs references to plans file paths
Fix plants.ts typo to plans.ts and add reference to the new
paymentProcessorPlans.ts file in Stripe, Lemon Squeezy, and Polar docs.

--- a/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
+++ b/opensaas-sh/blog/src/content/docs/guides/payment-integrations/lemon-squeezy.mdx
@@ -57,7 +57,7 @@ To create a product, go to the test products url [https://app.lemonsqueezy.com/p
    - As well as a one-time payment product/credits-based environment variable, `PAYMENTS_CREDITS_10_PLAN_ID`.
 
 :::note[Naming products differently]
-Note that if you change names of your products, you'll need to update your app code in `src/payment/plants.ts` to match these names as well.
+Note that if you change names of your products, you'll need to update your app code in `src/payment/plans.ts` and `src/payment/paymentProcessorPlans.ts` to match these names as well.
 :::
 
 ###  Using Lemon Squeezy Webhook in Local Development
